# Hiwot-web3-app

./: .gitignore  README.md  package-lock.json
contract/: .env.example  .gitignore  Cargo.toml  DEPLOYMENT_COMPLETE.md
contract/.cargo/: config.toml
contract/contracts/disbursement/: Cargo.toml
contract/contracts/disbursement/src/: contract.rs  errors.rs  events.rs  geofence.rs  lib.rs  storage.rs  test.rs  types.rs
contract/contracts/disbursement/test_snapshots/test/: test_check_eligibility.1.json  test_create_program.1.json  test_distribute_success.1.json  test_double_spend.1.json  test_duplicate_program.1.json  test_full_disbursement_lifecycle.1.json  test_fund_program.1.json  test_init.1.json  test_insufficient_budget_fail.1.json  test_outside_geofence.1.json
contract/contracts/identity/: Cargo.toml
contract/contracts/identity/src/: contract.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contract/contracts/identity/test_snapshots/test/: test_add_to_family.1.json  test_create_family.1.json  test_deactivate.1.json  test_exists.1.json  test_get_family_members_empty.1.json  (+2 more)
contract/contracts/supply_chain/: Cargo.toml
contract/contracts/supply_chain/src/: contract.rs  errors.rs  events.rs  lib.rs  storage.rs  tests.rs  types.rs
contract/contracts/token/: Cargo.toml
contract/contracts/token/src/: contract.rs  lib.rs  test.rs
contract/docs/: README.md
contract/scripts/: deploy.sh  deploy_disbursement.sh  deploy_identity.sh  deploy_supply_chain.sh  deploy_token.sh
contract/tests/: Cargo.toml  edge_cases.rs  integration.rs
(+76 files in other folders)
