[workspace]
resolver = "2"
members = [
    "contracts/identity",
    "contracts/token",
    "contracts/supply_chain",
    "contracts/disbursement",
]

[workspace.dependencies]
soroban-sdk = "=25.1.0"

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
panic = "abort"
lto = true